conf/iptables.txt
# [!] By Colton Silva (chinawaterstealers).
# SilvaSystems Absolute Security Firewall - Permanent State
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# --- 1. GLOBAL ENFORCEMENT ---
-A FORWARD -i eth1 -p tcp --dport 853 -j REJECT
-A FORWARD -i eth1 -p udp --dport 443 -j REJECT
-A FORWARD -i eth1 -p tcp -d 8.8.8.8,8.8.4.4,1.1.1.1,1.0.0.1,9.9.9.9,149.112.112.112,208.67.222.222,208.67.220.220 --dport 443 -j REJECT
-A FORWARD -i eth1 -p udp --dport 53 ! -d 10.0.0.1 -j REJECT
-A FORWARD -i eth1 -p tcp --dport 53 ! -d 10.0.0.1 -j REJECT

# --- 2. ACTIVE CUSTOMER SESSIONS (WATCHDOG INJECTION POINT) ---
# __FILTER_CLIENTS__

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# --- 3. MANDATORY DNS HIJACKING ---
-A PREROUTING -i eth1 -p udp --dport 53 -j REDIRECT --to-ports 53
-A PREROUTING -i eth1 -p tcp --dport 53 -j REDIRECT --to-ports 53

# --- 4. AUTHENTICATED BYPASS (WATCHDOG INJECTION POINT) ---
# __NAT_CLIENTS__

# --- 5. PORTAL REDIRECTION ---
-A PREROUTING -i eth1 -p tcp --dport 80 ! -d 10.0.0.1 -j DNAT --to-destination 10.0.0.1:80

-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
